Feature complete - simple integration to return a timestamp and test the simplest XPC service connection.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .gemini/
 .vscode/
+
+# Xcode
+.build/
+DerivedData/
+*.xcodeproj/project.xcworkspace/
+*.xcodeproj/xcuserdata/
+
+# Swift Package Manager
+Packages/
