--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ DerivedData/
 *.xcodeproj/project.xcworkspace/
 *.xcodeproj/xcuserdata/
 *.xcworkspace/
+project.pbxproj
 
 # Swift Package Manager
 Packages/
